# kfiles

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  build.rs  build_release.bat
benches/: my_benchmark.rs
build_assets/: icon.ase
src/: app.rs  config.rs  configs.rs  dir_entry.rs  filebuffer.rs  lib.rs  log.rs  main.rs  search.rs  strmatch.rs  tag.rs  thumbnail.rs  util.rs
src/app/: configs_screen.rs  file_action_screen.rs  main_screen.rs  mainscreen.rs  tag_edit_screen.rs  tag_list_screen.rs  taglist.rs  taglistscreen.rs
src/tag/: entries.rs  id.rs  mod.rs  tag.rs
src/tagging/: entries.rs  id.rs  mod.rs  tag.rs
src/widget/: context_menu.rs  dir_entry.rs  file_inspector.rs  file_list.rs  fuzzy_input.rs  mod.rs  notification_card.rs  tag_entry.rs
