[package]
name = "tag-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["image", "lazy", "advanced"] }
iced_aw = { version = "0.8.0", features = ["wrap", "selection_list"] }
walkdir = "2.5.0"
serde = { version = "1.0.195", features = ["derive"] }
directories = "5.0.1"
toml = "0.8.12"
thiserror = "1.0.59"
convert_case = "0.6.0"
image = "0.25.1"
rand = "0.8.5"
opener = "0.7.0"

# anyhow
# clean-path
# confy

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
codegen-units = 1
