[package]
name = "kfiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = [
	"image",
	"lazy",
	"advanced",
	"tokio",
	"svg",
] }
iced_aw = { version = "0.9.2", features = [
	"wrap",
	# "selection_list",
	"spinner",
	"icons",
	"floating_element",
] }
walkdir = "2.5.0"
directories = "5.0.1"
thiserror = "1.0.59"
convert_case = "0.6.0"
image = "0.25.1"
rand = "0.8.5"
opener = { version = "0.7.0", features = ["reveal"] }
regex = "1.10.4"
rfd = "0.14.1"
nanoserde = "0.1.37"

# anyhow
# clean-path
# confy

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
codegen-units = 1
